--- a/.travis.yml
+++ b/.travis.yml
@@ -8,12 +8,8 @@ branches:
 notifications:
   email:
     recipients:
-    - j.bernal@upm.es
-services:
-- mysql
-before_install:
-- mysql -e 'CREATE DATABASE IF NOT EXISTS forge;'
+    - freddy.tandazo.yanez@alumnos.upm.es
 script:
 - mvn verify
 - mvn org.jacoco:jacoco-maven-plugin:prepare-agent verify
-- mvn sonar:sonar -Dsonar.host.url=https://sonarcloud.io -Dsonar.organization=miw-upm-github -Dsonar.login=$SONAR3
+- mvn sonar:sonar -Dsonar.host.url=https://sonarcloud.io -Dsonar.organization=fatandazdba-github -Dsonar.login=$SONAR3
